[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene1.gd" type="Script" id=1]
[ext_resource path="res://LighteningLayer.gd" type="Script" id=2]

[node name="Scene1" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Polygon2D" parent="."]
color = Color( 0.027451, 0.027451, 0.027451, 1 )
polygon = PoolVector2Array( -64, -31, -64, 645, 1119, 643, 1089, -51 )

[node name="BallLayer" type="Node2D" parent="."]

[node name="LighteningLayer" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 510, 294 )
current = true

[node name="SpawnBallTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="CleanupTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="SpawnBallTimer" to="." method="_on_SpawnBallTimer_timeout"]
[connection signal="timeout" from="CleanupTimer" to="." method="_on_CleanupTimer_timeout"]
